@@ -461,6 +461,11 @@ deflate = 1
 # chunkCacheSizeTargetInChunks = 3
 # maxChunkCacheSizeInBytes = 10649600  (100MB)
 
+# By default, the Translator looks for control data to see if the number of events is known.
+# If so, this overrides options above. To control chunking, one should also set useControlData
+# below to 0 (or False)
+# useControlData = 1  
+#
 # ---------------------------------------
 # REFINED DATASET CONTROL
 #
